ISSUE-19 pmd - fix pmd warnings